## $Id$

## install header-files with prefix-subdir BOINC/ to avoid name-conflicts
includedir = ${prefix}/include/BOINC/

## the following headers need to be installed
include_HEADERS =  boinc_db.h db_base.h

## other stuff to go into the distribution
EXTRA_DIST = constraints.sql schema.sql mysql.h init_db
